...
    <string name="clear_local_storage">Clear local storage</string>
    <string name="clear_local_storage_success">Cleared local storage!</string>

    <!-- Task view and its buttons -->
    <string name="task_title_hint">Name</string>
    <string name="task_description_hint">Description</string>
    <string name="add_subtask">Add subtask</string>
    <string name="task_completion_title">Congratulations!</string>
    <string name="task_completion_desc">You just completed a task. Keep it up!</string>
    <string name="subtask_completion_desc">You just completed a task. Keep it up!</string>
    <string name="tap_to_modify">Tap to modify</string>
    <string name="add_remove_assignee">Add/remove assignee</string>
    <string name="assignees_button">Assignees</string>

    <!-- Calendar view and its buttons -->
    <string name="cycle_calendar_views" translatable="false">↻</string>
    <string name="no_events">No events on this day.</string>
    <string name="refresh_calendar_fail">Could not refresh.</string>
    <string name="calendar_upcoming_date">On the %1$s.</string>
...
    <string name="groceries">Groceries</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="add_an_event">Add an event</string>
    <string name="cycle_view">Cycle view</string>
    <string name="offline_warning">You have gone offline.</string>
    <string name="tl_screen_new_task">New task</string>
    <string name="show_qr_code">Show QR code</string>

    <!-- Localization -->
    <string name="title_location_permission">Location permissions</string>
    <string name="text_location_permission">We need access to your location in order to
        automatically select the house closest to you</string>
...
    <string name="new_expense">New Expense</string>
    <string name="adds_up_to_total">The total of the shares doesn\'t add up to the cost of the expense.</string>

    <!-- Notifications -->
    <string name="reminder">Reminder</string>
    <string name="reminder_message">Don\'t forget your task :</string>
    <string name="notify">Notify</string>
    <string name="show_image">Show image of household</string>

    <!-- Offline mode -->
    <string name="go_offline">Go offline</string>

    <!-- Others -->
...
