...
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="start">

    <EditText
        android:id="@+id/task_title_input"
        android:hint="@string/task_title_hint"
        android:textStyle="bold"
        android:backgroundTint="#00000000"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/task_description_input"
        android:hint="@string/task_description_hint"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subtask_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
