<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/entire_screen"
    tools:context=".panels.main_activities.TaskListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tl_screen_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="wrap"
...
